[workspace]
members = [
    # 'native-programs' folder is excluded from this list intentionally
    # and needs to be added back when the development of 'fusion-swap-native'
    # program will be continued.
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
