[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.30.1", optional = true }
solana-program = { version = "1.18.26", optional = true }
borsh = { version = "1.5.5", optional = true }
borsh-derive = { version = "1.5.5", optional = true }

[features]
default = ["anchor"]
native = ["borsh", "borsh-derive", "solana-program"]
anchor = ["anchor-lang"]
