[package]
name = "fusion-swap-native"
version = "0.1.0"
edition = "2021"

[lib]
name="fusion_swap_native"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.18.26"
spl-associated-token-account = {version="3.0.4", features = ["no-entrypoint"]}
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "3.0.5", features = ["no-entrypoint"] }
spl-discriminator = "0.4.1"
spl-program-error = "0.6.0"
thiserror = "2.0.11"
num-derive = "0.4.2"

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
