[package]
name = "fusion-swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fusion_swap"

[features]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = "0.31.0"
common = { path =  "../../common" }
whitelist = { path = "../whitelist", features = ["no-entrypoint"] }
muldiv = "1.0.1"

[patch.crates-io]
proc-macro2 = { git = "https://github.com/dtolnay/proc-macro2", rev = "83519e88337217c75794935381de61ab02c60a9b" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(solana)"] }
