[package]
name = "whitelist"
version = "0.1.0"
description = "Whitelist program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whitelist"

[features]
default = []
idl-build = []

[dependencies]
solana-program = "1.18.1"
borsh = "1.3.0"
thiserror = "1.0.56"
common = { path = "../../common" }
anchor-lang = { version = "0.30.1", optional = true }

[dev-dependencies]
solana-program-test = "1.18.1"
solana-sdk = "1.18.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(solana)"] }
