[package]
name = "whitelist"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whitelist"

[features]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = "0.31.1"
common = { path = "../../common" }
solana-security-txt = "1.1.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(solana)"] }
